--- a/index.html
+++ b/index.html
@@ -27,7 +27,14 @@
                 <input type="text" id="todoText" placeholder="Enter TODO Text">
                 <button id="save">Save</button>
             </div>
-            <ul class="todo-container" id="todoWrapper"></ul>
+            <div class="remove-container" id="removeContainer">
+              <button id="removeAllBtn">Remove All</button>
+            </div>
+            <div class="not-found" id="notFound">
+              <p>Todo Items Not Found</p>
+            </div>
+            <ul class="todo-container" id="todoWrapper">
+            </ul>
         </div>
     </main>
 
