--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             <div class="input-box">
                 <input type="text" id="todoText" placeholder="Enter TODO Text">
                 <button id="save">Save</button>
+                <button id="update">Update</button>
+
             </div>
             <div class="remove-container" id="removeContainer">
               <button id="removeAllBtn">Remove All</button>
